fixed the scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -88,15 +88,6 @@ a:hover {
   top: -24px;
 }
 
-.weather-temperature .active {
-  color: #142d4c;
-  cursor: default;
-}
-
-.weather-temperature .active:hover {
-  text-decoration: none;
-}
-
 .scrolling-wrapper {
   overflow-x: auto;
 }
@@ -114,13 +105,15 @@ a:hover {
 ::-webkit-scrollbar {
   width: 5px;
   height: 10px;
+  padding: 5px;
 }
 
 ::-webkit-scrollbar-track {
   border-radius: 10px;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background-color: #fff;
+  background-color: whitesmoke;
 }
